--- a/main.Rmd
+++ b/main.Rmd
@@ -52,6 +52,15 @@ sum_sq <- function(df, measure) {
 }
 sum_sq(chaff2, mass)
 ```
+####### adopt function to calculate SS(x) for each group ####
+```{r}
+sum_sq2 <- function(df, measure, group) {
+  df %>% group_by({{ group }}) %>% 
+    summarise(ss = sum(({{measure}} - mean({{measure}}))^2))
+}
+
+sum_sq2(chaff2, mass, sex)
+```
 
 
 # Discussion
