--- a/references.bib
+++ b/references.bib
@@ -5,3 +5,8 @@ title={Birds of Britain and Europe},
 publisher={HarperCollins},
 author={Peterson, Roger Tory and Mountfort, Guy and Hollom, P. A. D and Wallace, D. I. M},
 year={2004}}
+
+@misc{common_chaffinch_2020,
+url={https://en.wikipedia.org/wiki/Common_chaffinch#/media/File:Chaffinch_(Fringilla_coelebs).jpg},
+journal={En.wikipedia.org},
+year={2020}}
